--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "downshift": "^6.1.7",
+    "emotion": "^11.0.0",
+    "match-sorter": "^6.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-emotion": "^10.0.0",
     "react-scripts": "4.0.3",
+    "starwars-names": "^1.6.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
