--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-select": "^4.0.17"
+    "@types/react-select": "^4.0.17",
+    "@types/styled-components": "^5.1.13"
   }
 }
